Add routes documentation for event admin
