# app/Presenter/Http/Controllers/Api/Admin/Events/DeleteEventController.php
@@ -7,6 +7,13 @@ use App\Presenter\Http\Controllers\Api\ApiController;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Validator;
+use OpenApi\Attributes\Delete;
+use OpenApi\Attributes\JsonContent;
+use OpenApi\Attributes\Parameter;
+use OpenApi\Attributes\Property;
+use OpenApi\Attributes\Response;
+use OpenApi\Attributes\Schema;
+use Symfony\Component\HttpFoundation\Response as HttpResponse;
 
 class DeleteEventController extends ApiController
 {
@@ -17,6 +24,45 @@ class DeleteEventController extends ApiController
         $this->repository = $repository;
     }
 
+    #[Delete(
+        path: '/admin/events/{id}',
+        summary: 'Deletes an event.',
+        security: [[
+            'sanctum' => []
+        ]],
+        tags: ['Admin'],
+        parameters: [
+            new Parameter(
+                name: 'id',
+                description: 'The id of the event.',
+                in: 'path',
+                required: true,
+                schema: new Schema(type: 'integer'))
+        ],
+        responses: [
+            new Response(
+                response: HttpResponse::HTTP_NO_CONTENT,
+                description: 'The event was deleted.'
+            ),
+            new Response(
+                response: HttpResponse::HTTP_BAD_REQUEST,
+                description: 'When "code" is zero, means validation. When is one, means that the event does not exists.',
+                content: new JsonContent(
+                    properties: [
+                        new Property(property: 'code', type: 'integer', default: '0')
+                    ]
+                )
+            ),
+            new Response(
+                response: HttpResponse::HTTP_UNAUTHORIZED,
+                description: 'The admin is not authenticated.'
+            ),
+            new Response(
+                response: HttpResponse::HTTP_FORBIDDEN,
+                description: 'The user is not an admin/super.'
+            ),
+        ]
+    )]
     public function __invoke(Request $request, int|string $eventId): JsonResponse
     {
         $areParamsValid = $this->validateParams($eventId);
