# app/Presenter/Http/Controllers/Api/Admin/Events/UpdateEventController.php
@@ -2,6 +2,7 @@
 
 namespace App\Presenter\Http\Controllers\Api\Admin\Events;
 
+use App\Domain\Model\EventModel;
 use App\Domain\Repository\EventRepository;
 use App\Presenter\Http\Controllers\Api\ApiController;
 use App\Presenter\Rules\SlugValidationRule;
@@ -9,6 +10,14 @@ use Carbon\Carbon;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Validator;
+use OpenApi\Attributes\JsonContent;
+use OpenApi\Attributes\Parameter;
+use OpenApi\Attributes\Patch;
+use OpenApi\Attributes\Property;
+use OpenApi\Attributes\RequestBody;
+use OpenApi\Attributes\Response;
+use OpenApi\Attributes\Schema;
+use Symfony\Component\HttpFoundation\Response as HttpResponse;
 
 class UpdateEventController extends ApiController
 {
@@ -19,6 +28,59 @@ class UpdateEventController extends ApiController
         $this->repository = $repository;
     }
 
+    #[Patch(
+        path: '/admin/events/{id}',
+        summary: 'Updates an event.',
+        security: [[
+            'sanctum' => []
+        ]],
+        requestBody: new RequestBody(
+            content: new JsonContent(
+                properties: [
+                    new Property(property: EventControllerInputs::FIELD_NAME, type: 'string', default: ''),
+                    new Property(property: EventControllerInputs::FIELD_SLUG, type: 'string', default: ''),
+                    new Property(property: EventControllerInputs::FIELD_DETAILS, type: 'string', default: ''),
+                    new Property(property: EventControllerInputs::FIELD_SUBSCRIPTION_START_AT, type: 'string', format: 'date-time', default: ''),
+                    new Property(property: EventControllerInputs::FIELD_SUBSCRIPTION_END_AT, type: 'string', format: 'date-time', default: ''),
+                    new Property(property: EventControllerInputs::FIELD_PRESENTATION_AT, type: 'string', format: 'date-time', default: ''),
+                ]
+            )
+        ),
+
+        tags: ['Admin'],
+        parameters: [
+            new Parameter(
+                name: 'id',
+                description: 'The id of the event.',
+                in: 'path',
+                required: true,
+                schema: new Schema(type: 'integer'))
+        ],
+        responses: [
+            new Response(
+                response: HttpResponse::HTTP_OK,
+                description: 'The event was updated and returns all its data.',
+                content: new JsonContent(ref: EventModel::class)
+            ),
+            new Response(
+                response: HttpResponse::HTTP_BAD_REQUEST,
+                description: 'When "code" is zero, means validation. When is one, means that the event does not exists.',
+                content: new JsonContent(
+                    properties: [
+                        new Property(property: 'code', type: 'integer', default: '0')
+                    ]
+                )
+            ),
+            new Response(
+                response: HttpResponse::HTTP_UNAUTHORIZED,
+                description: 'The admin is not authenticated.'
+            ),
+            new Response(
+                response: HttpResponse::HTTP_FORBIDDEN,
+                description: 'The user is not an admin/super.'
+            ),
+        ]
+    )]
     public function __invoke(Request $request, int|string $eventId): JsonResponse
     {
         $jsonString = $request->getContent();
